--- a/Edison/index.html
+++ b/Edison/index.html
@@ -19,16 +19,16 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "TP ESP32",
-		"logo": "images/Logo.png"
+		"logo": "/images/Logo.png"
 }</script>
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="Accueil">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="Accueil.html" data-home-page-title="Accueil" data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="fr"><header class="u-clearfix u-header u-palette-4-light-3 u-header" id="sec-6f81"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="./" class="u-image u-logo u-image-1" data-image-width="405" data-image-height="451" title="Accueil">
-          <img src="images/Logo.png" class="u-logo-image u-logo-image-1">
+  <body data-home-page="Accueil.html" data-home-page-title="Accueil" data-path-to-root="/" data-include-products="false" class="u-body u-xl-mode" data-lang="fr"><header class="u-clearfix u-header u-palette-4-light-3 u-header" id="sec-6f81"><div class="u-clearfix u-sheet u-sheet-1">
+        <a href="/" class="u-image u-logo u-image-1" data-image-width="405" data-image-height="451" title="Accueil">
+          <img src="/images/Logo.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-align-left u-font-size-14 u-menu u-menu-hamburger u-nav-spacing-25 u-offcanvas u-menu-1" data-responsive-from="XL">
           <div class="menu-collapse">
@@ -39,16 +39,16 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="./" style="padding: 10px 20px;">Accueil</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Démarrage.html" style="padding: 10px 20px;">Démmarage - ESP32</a>
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="/" style="padding: 10px 20px;">Accueil</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="/Démarrage.html" style="padding: 10px 20px;">Démmarage - ESP32</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
             <div class="u-align-center u-black u-container-align-center u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="./">Accueil</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Démarrage.html">Démmarage - ESP32</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="/">Accueil</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="/Démarrage.html">Démmarage - ESP32</a>
 </li></ul>
               </div>
             </div>
@@ -59,7 +59,7 @@
     <section class="u-clearfix u-section-1" id="sec-0165">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-align-center u-text u-text-default u-text-1">TP - ESP32</h1>
-        <a href="Démarrage.html" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius u-btn-1">Démarrage </a>
+        <a href="/Démarrage.html" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius u-btn-1">Démarrage </a>
         <a href="#" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius u-btn-2">LED RéSEAUX </a>
         <a href="#" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius u-btn-3">RGB RéSEAUX </a>
       </div>
