--- a/RGB-Server.html
+++ b/RGB-Server.html
@@ -112,7 +112,7 @@
         </p>
         <img class="u-image u-image-contain u-image-default u-image-1" src="/images/image7.png" alt="" data-image-width="815" data-image-height="712">
         <img class="u-expanded-width-xs u-image u-image-default u-image-2" src="/images/IMG_20241205_1614422152.jpg" alt="" data-image-width="3072" data-image-height="2682">
-        <p class="u-text u-text-2">If you plan on using the rgb led by yourself in the feature keep in mind that the&nbsp;<br>Red Green and Blue is ordered like shown below, you can easily tell which side red is by locating the longer pin
+        <p class="u-text u-text-2">If you plan on using the rgb led by yourself in the future keep in mind that the&nbsp;<br>Red Green and Blue is ordered like shown below, you can easily tell which side red is by locating the longer pin
         </p>
         <img class="u-expanded-width-xs u-image u-image-contain u-image-default u-image-3" src="/images/image8.png" alt="" data-image-width="611" data-image-height="155">
       </div>
@@ -149,9 +149,6 @@
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <p class="u-text">
-        <span>This site was created with the </span>
-        <a class="u-link" href="https://nicepage.com/" target="_blank" rel="nofollow">
-          <span>Nicepage</span>
         </a>
       </p>
     </section>
