--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" style="padding: 10px 20px;">----ESP32----</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="/Démarrage.html" style="padding: 10px 20px;">Getting Started</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="/RGB-Server.html" style="padding: 10px 20px;">RGB Server</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="/WIFI-SCANNER.html" style="padding: 10px 20px;">OLED Wifi Scanner</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" style="padding: 10px 20px;">--------------</a>
 </li></ul>
           </div>
@@ -54,6 +55,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link">----ESP32----</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="/Démarrage.html">Getting Started</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="/RGB-Server.html">RGB Server</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="/WIFI-SCANNER.html">OLED Wifi Scanner</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link">--------------</a>
 </li></ul>
               </div>
@@ -64,9 +66,10 @@
       </div></header>
     <section class="u-clearfix u-section-1" id="sec-0165">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-align-center u-text u-text-default u-text-1">TP - ESP32</h1>
+        <h1 class="u-align-center u-text u-text-default u-text-1">TUTO - ESP32</h1>
         <a href="/Démarrage.html" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius u-btn-1">GETTING STARTED </a>
         <a href="/RGB-Server.html" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius u-btn-2">RGB SERVER </a>
+        <a href="/WIFI-SCANNER.html" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius u-btn-3">OLED -​ WIFI Scanner</a>
         <img class="u-image u-image-contain u-image-round u-preserve-proportions u-image-1" src="/images/main-image6-1675944072501.webp" alt="" data-image-width="1200" data-image-height="1200" data-animation-name="tada" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">
       </div>
     </section>
@@ -81,7 +84,9 @@
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <p class="u-text">
-
+        <span>This site was created with the </span>
+        <a class="u-link" href="https://nicepage.com/" target="_blank" rel="nofollow">
+          <span>Nicepage</span>
         </a>
       </p>
     </section>
