--- a/Démarrage.html
+++ b/Démarrage.html
@@ -48,6 +48,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" style="padding: 10px 20px;">----ESP32----</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="/Démarrage.html" style="padding: 10px 20px;">Getting Started</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="/RGB-Server.html" style="padding: 10px 20px;">RGB Server</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="/WIFI-SCANNER.html" style="padding: 10px 20px;">OLED Wifi Scanner</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" style="padding: 10px 20px;">--------------</a>
 </li></ul>
           </div>
@@ -59,6 +60,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link">----ESP32----</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="/Démarrage.html">Getting Started</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="/RGB-Server.html">RGB Server</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="/WIFI-SCANNER.html">OLED Wifi Scanner</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link">--------------</a>
 </li></ul>
               </div>
@@ -134,6 +136,9 @@
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <p class="u-text">
+        <span>This site was created with the </span>
+        <a class="u-link" href="https://nicepage.com/" target="_blank" rel="nofollow">
+          <span>Nicepage</span>
         </a>
       </p>
     </section>
