Fixed Links - WEBSTUDIO

--- a/esp32/getting-started/index.html
+++ b/esp32/getting-started/index.html
@@ -8,7 +8,7 @@
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta property="og:url" content="https://url/copy-1" />
+    <meta property="og:url" content="https://url/esp32/getting-started" />
     <title>Home</title>
     <meta property="og:title" content="Home" />
     <meta property="og:type" content="website" />
@@ -371,7 +371,7 @@
     </div>
     <div class="w-box">
       <a
-        href="/copy-1/copy-1"
+        href="/esp32/rgb-server"
         class="w-link c3j6eu6 cw8wk4g c1n8335o cnrqlv9 c1aj0wmm c5lna9m c19bzeoe c6gts8m cywnn7c cgpqfz5 c16mm8xg c8gwi5u c17dfjxw c1opx329 c1upkxol c1dukfjv c920vq8 c1drgsit co8ar9d c1d5e9u5 c1h1nl5c c13gmqhk c1hqpamb c1u5brzr cef8lky c1rvw9cl chewl0k cks4e9z cwqrhhf c1q5912w c1szy17v ci6o494 c17d547z c1dme089 ce6mn25"
         ><span class="w-text"><b class="w-bold-text">NEXT</b></span></a
       ><a
@@ -388,10 +388,10 @@
         "abortStatusCode": "!undefined",
         "_abortCall": "!undefined",
         "_pageContextInitIsPassedToClient": "!undefined",
-        "pageId": "/pages/copy-1",
+        "pageId": "/pages/esp32/getting-started",
         "routeParams": {},
         "data": {
-          "url": "https://url/copy-1",
+          "url": "https://url/esp32/getting-started",
           "system": { "params": {}, "search": {}, "origin": "https://url" },
           "resources": {},
           "pageMeta": {
@@ -409,23 +409,23 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.DO3-HgqA.js"
+      src="/assets/entries/entry-server-routing.DidfsT6n.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_copy-1.Dl_ZASWz.js"
+      href="/assets/entries/pages_esp32_getting-started.lfRpra8n.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-C-sEj5Lc.js"
+      href="/assets/chunks/chunk-CYl7P4of.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-BE_mumB7.js"
+      href="/assets/chunks/chunk-CUWq1ZDr.js"
       as="script"
       type="text/javascript"
     />
