--- a/esp32/rgb-server/index.html
+++ b/esp32/rgb-server/index.html
@@ -8,7 +8,7 @@
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta property="og:url" content="https://url/copy-1/copy-1" />
+    <meta property="og:url" content="https://url/esp32/rgb-server" />
     <title>Home</title>
     <meta property="og:title" content="Home" />
     <meta property="og:type" content="website" />
@@ -508,10 +508,10 @@
         "abortStatusCode": "!undefined",
         "_abortCall": "!undefined",
         "_pageContextInitIsPassedToClient": "!undefined",
-        "pageId": "/pages/copy-1/copy-1",
+        "pageId": "/pages/esp32/rgb-server",
         "routeParams": {},
         "data": {
-          "url": "https://url/copy-1/copy-1",
+          "url": "https://url/esp32/rgb-server",
           "system": { "params": {}, "search": {}, "origin": "https://url" },
           "resources": {},
           "pageMeta": {
@@ -529,23 +529,23 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.DO3-HgqA.js"
+      src="/assets/entries/entry-server-routing.DidfsT6n.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_copy-1_copy-1.DQ_u5qVd.js"
+      href="/assets/entries/pages_esp32_rgb-server.p-c8wJni.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-C-sEj5Lc.js"
+      href="/assets/chunks/chunk-CYl7P4of.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-BE_mumB7.js"
+      href="/assets/chunks/chunk-CUWq1ZDr.js"
       as="script"
       type="text/javascript"
     />
