--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
         decoding="async"
         loading="lazy"
       /><a
-        href="/copy-1"
+        href="/esp32/getting-started"
         class="w-link c3j6eu6 cw8wk4g c1n8335o cnrqlv9 c1aj0wmm c5lna9m c19bzeoe c6gts8m cywnn7c cgpqfz5 c16mm8xg c8gwi5u c17dfjxw c1opx329 c1upkxol c1dukfjv c920vq8 c1drgsit co8ar9d c1d5e9u5 c1h1nl5c c13gmqhk c14ghf94 c1u5brzr cef8lky c1j915ev chewl0k cks4e9z cwqrhhf c1q5912w c1szy17v ci6o494 c17d547z c1dme089 ce6mn25"
         ><b class="w-bold-text">Getting Started</b></a
       ><a
-        href="/copy-1/copy-1"
+        href="/esp32/rgb-server"
         class="w-link c3j6eu6 cw8wk4g c1n8335o cnrqlv9 c1aj0wmm c5lna9m c19bzeoe c6gts8m c1fwk2hh cgpqfz5 c16mm8xg c8gwi5u c17dfjxw c1opx329 c1upkxol c1dukfjv c920vq8 c1drgsit co8ar9d c1d5e9u5 c1h1nl5c c13gmqhk c140aa3g c1u5brzr cef8lky c1j915ev chewl0k cks4e9z cwqrhhf c1q5912w c1szy17v ci6o494 c17d547z c1dme089 ce6mn25"
         ><b class="w-bold-text">RGB Server</b></a
       ><a
@@ -143,18 +143,18 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.DO3-HgqA.js"
+      src="/assets/entries/entry-server-routing.DidfsT6n.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_index.DApUShaN.js"
+      href="/assets/entries/pages_index.DT7a71qX.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-C-sEj5Lc.js"
+      href="/assets/chunks/chunk-CYl7P4of.js"
       as="script"
       type="text/javascript"
     />
