--- a/esp32/rgb-server/index.html
+++ b/esp32/rgb-server/index.html
@@ -4,7 +4,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/assets/static/app_generated_index-6937cd5a.DLUYyvLU.css"
+      href="/assets/static/app_generated_index-6937cd5a.BStTqCqC.css"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -40,7 +40,7 @@
           loading="lazy" /></a
       ><button
         type="button"
-        class="w-button c1uqrecz c10ua9p1 c1qy06sr cpbg552 cshxx6g c1lub6ji c77fen c1kt3hjx c1geiwv ckcg2od cealztw cvs4hrp comp0x6 cqpuunw c1wvok5d c1eikf4o c1iwr2ut c1l088 c1fh3e63 c14zbtl7 c14xknmu ci4hcet c1xm82re caz9sw9 c3ke8ei c1vra1wj c1rkfrji c1t36fdn c1twcrqe"
+        class="w-button c1ya628u c10ua9p1 c1qy06sr cpbg552 cshxx6g c1lub6ji c77fen c1kt3hjx c1geiwv ckcg2od cealztw cvs4hrp comp0x6 cqpuunw c1wvok5d c1eikf4o c1iwr2ut c1l088 c1fh3e63 c14zbtl7 c14xknmu c1mkwhsj c50kpvg c1tup317 c1lxdi4i c1xm82re caz9sw9 c3ke8ei c1vra1wj c1rkfrji c1t36fdn c1twcrqe"
         aria-haspopup="dialog"
         aria-expanded="false"
         aria-controls="radix-:R26:"
@@ -67,8 +67,10 @@
         />
       </button>
     </div>
-    <div class="w-box">
-      <div class="w-text chewl0k cs8jnol c1bb95j4 c136d2hq">
+    <div
+      class="w-box ce19egy c1h1nl5c c13gmqhk cogsgih c16bzkdh c13ckunz cn13o9d c1tszs9s c1mmoi84 cw4dc5j c1933afg c1cl6xrl cex20e6"
+    >
+      <div class="w-text chewl0k cs8jnol c1bb95j4 c192du2r c136d2hq">
         Keep in mind these resistor colors!
       </div>
       <div
@@ -123,7 +125,7 @@
           width="396"
           height="149"
           src="/assets/Capture_d__cran_2024-12-03_155524_dbw-G-XKY1jhwxOwFXklI.png"
-          class="w-image c1h1nl5c c13gmqhk c1d5e9u5 c3793j1 c14zbtl7"
+          class="w-image c1h1nl5c c13gmqhk c1uzvt68 c3793j1 c14zbtl7"
           sizes="100vw"
           srcset="
             /assets/Capture_d__cran_2024-12-03_155524_dbw-G-XKY1jhwxOwFXklI.png  16w,
@@ -263,7 +265,7 @@
         width="815"
         height="712"
         src="/assets/Capture_d__cran_2024-12-06_105433_4oEcP_iTImmfTXFzdeHRv.png"
-        class="w-image cw8wk4g c1n8335o c1lpyau1 c1h1nl5c c13gmqhk c1x0pid4"
+        class="w-image cw8wk4g c1n8335o c1lpyau1 c1h1nl5c c13gmqhk c1x0pid4 c1y7eg9h cjp0mtu ce6iim8 c1mlptfz"
         sizes="100vw"
         srcset="
           /assets/Capture_d__cran_2024-12-06_105433_4oEcP_iTImmfTXFzdeHRv.png   16w,
@@ -288,7 +290,7 @@
         width="3072"
         height="2682"
         src="/assets/IMG_20241205_161442215_2_Ceu_44MZzk6ae_DIx8bOE.jpg"
-        class="w-image cw8wk4g c1n8335o c1nkaght c1h1nl5c c13gmqhk ck4v81x"
+        class="w-image cw8wk4g c1n8335o c1nkaght c1h1nl5c c13gmqhk ck4v81x c1y7eg9h cjp0mtu ce6iim8 c1mlptfz"
         sizes="100vw"
         srcset="
           /assets/IMG_20241205_161442215_2_Ceu_44MZzk6ae_DIx8bOE.jpg   16w,
@@ -321,7 +323,7 @@
         width="611"
         height="155"
         src="/assets/Capture_d__cran_2024-12-06_105613_IJLfdgh2qF7hzuEoc4mip.png"
-        class="w-image cw8wk4g c1n8335o cex87fq c1h1nl5c c13gmqhk cqn6qth"
+        class="w-image cw8wk4g c1n8335o cex87fq c1h1nl5c c13gmqhk cqn6qth c1y7eg9h cjp0mtu ce6iim8 c1mlptfz"
         sizes="100vw"
         srcset="
           /assets/Capture_d__cran_2024-12-06_105613_IJLfdgh2qF7hzuEoc4mip.png   16w,
@@ -432,7 +434,7 @@
         width="1920"
         height="1045"
         src="/assets/image10_LWg8UQakglldy6G1UjtkV.png"
-        class="w-image cw8wk4g c1n8335o cuow313 c1h1nl5c c13gmqhk c16shwhx"
+        class="w-image cw8wk4g c1n8335o cuow313 c1h1nl5c c13gmqhk c16shwhx c1y7eg9h cjp0mtu ce6iim8 c1mlptfz"
         sizes="100vw"
         srcset="
           /assets/image10_LWg8UQakglldy6G1UjtkV.png   16w,
@@ -468,7 +470,7 @@
         width="550"
         height="293"
         src="/assets/Capture_d__cran_2024-12-06_112355_R-UWixstSh9mrZhbB1slm.png"
-        class="w-image cw8wk4g c1n8335o cxtgk2x c1h1nl5c c13gmqhk c1tr23vj"
+        class="w-image cw8wk4g c1n8335o cxtgk2x c1h1nl5c c13gmqhk c1tr23vj c1y7eg9h cjp0mtu ce6iim8 c1mlptfz"
         sizes="100vw"
         srcset="
           /assets/Capture_d__cran_2024-12-06_112355_R-UWixstSh9mrZhbB1slm.png   16w,
@@ -491,12 +493,12 @@
     </div>
     <div class="w-box">
       <a
-        href="/"
+        href="/esp32/wifi-scanner"
         class="w-link c3j6eu6 cw8wk4g c1n8335o cnrqlv9 c1aj0wmm c5lna9m c19bzeoe c6gts8m cywnn7c cgpqfz5 c16mm8xg c8gwi5u c17dfjxw c1opx329 c1upkxol c1dukfjv c920vq8 c1drgsit co8ar9d c1d5e9u5 c1h1nl5c c13gmqhk c1hqpamb c1u5brzr cef8lky c1rvw9cl chewl0k cks4e9z cwqrhhf c1q5912w c1szy17v ci6o494 c17d547z c1dme089 ce6mn25"
         ><span class="w-text"><b class="w-bold-text">NEXT</b></span></a
       ><a
         href="/"
-        class="w-link c3j6eu6 cw8wk4g c1n8335o cnrqlv9 c1aj0wmm c5lna9m c19bzeoe c6gts8m c1u4q7z0 cgpqfz5 c16mm8xg c8gwi5u c17dfjxw c1opx329 c1upkxol c1dukfjv c920vq8 c1drgsit co8ar9d c1d5e9u5 c1h1nl5c c13gmqhk cghu1xd c1u5brzr cef8lky c1rvw9cl chewl0k cks4e9z cwqrhhf c1q5912w c1szy17v ci6o494 c17d547z c1dme089 ce6mn25"
+        class="w-link c3j6eu6 cw8wk4g c1n8335o cnrqlv9 c1aj0wmm c5lna9m c19bzeoe c6gts8m c1u4q7z0 cgpqfz5 c16mm8xg c8gwi5u c17dfjxw c1opx329 c1upkxol c1dukfjv c920vq8 c1drgsit c16mmw3b c1d5e9u5 c1h1nl5c c13gmqhk cghu1xd c1u5brzr cef8lky c1rvw9cl chewl0k cks4e9z cwqrhhf c1q5912w c1szy17v ci6o494 c17d547z c1dme089 ce6mn25"
         ><b class="w-bold-text">HOME</b></a
       >
     </div>
@@ -529,23 +531,23 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.DidfsT6n.js"
+      src="/assets/entries/entry-server-routing.Cps506C4.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_esp32_rgb-server.p-c8wJni.js"
+      href="/assets/entries/pages_esp32_rgb-server.Bc833uq8.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-CYl7P4of.js"
+      href="/assets/chunks/chunk-fMywX80e.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-CUWq1ZDr.js"
+      href="/assets/chunks/chunk-jXEKo5QQ.js"
       as="script"
       type="text/javascript"
     />
