--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/assets/static/app_generated_index-6937cd5a.DLUYyvLU.css"
+      href="/assets/static/app_generated_index-6937cd5a.BStTqCqC.css"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -40,7 +40,7 @@
           loading="lazy" /></a
       ><button
         type="button"
-        class="w-button c1uqrecz c10ua9p1 c1qy06sr cpbg552 cshxx6g c1lub6ji c77fen c1kt3hjx c1geiwv ckcg2od cealztw cvs4hrp comp0x6 cqpuunw c1wvok5d c1eikf4o c1iwr2ut c1l088 c1fh3e63 c14zbtl7 c14xknmu ci4hcet c1xm82re caz9sw9 c3ke8ei c1vra1wj c1rkfrji c1t36fdn c1twcrqe"
+        class="w-button c1ya628u c10ua9p1 c1qy06sr cpbg552 cshxx6g c1lub6ji c77fen c1kt3hjx c1geiwv ckcg2od cealztw cvs4hrp comp0x6 cqpuunw c1wvok5d c1eikf4o c1iwr2ut c1l088 c1fh3e63 c14zbtl7 c14xknmu c1mkwhsj c50kpvg c1tup317 c1lxdi4i c1xm82re caz9sw9 c3ke8ei c1vra1wj c1rkfrji c1t36fdn c1twcrqe"
         aria-haspopup="dialog"
         aria-expanded="false"
         aria-controls="radix-:R16:"
@@ -105,12 +105,12 @@
         class="w-link c3j6eu6 cw8wk4g c1n8335o cnrqlv9 c1aj0wmm c5lna9m c19bzeoe c6gts8m c1fwk2hh cgpqfz5 c16mm8xg c8gwi5u c17dfjxw c1opx329 c1upkxol c1dukfjv c920vq8 c1drgsit co8ar9d c1d5e9u5 c1h1nl5c c13gmqhk c140aa3g c1u5brzr cef8lky c1j915ev chewl0k cks4e9z cwqrhhf c1q5912w c1szy17v ci6o494 c17d547z c1dme089 ce6mn25"
         ><b class="w-bold-text">RGB Server</b></a
       ><a
+        href="/esp32/wifi-scanner"
         class="w-link c3j6eu6 cw8wk4g c1n8335o cnrqlv9 c1aj0wmm c5lna9m c19bzeoe c6gts8m c1fwk2hh cgpqfz5 c16mm8xg c8gwi5u c17dfjxw c1opx329 c1upkxol c1dukfjv c920vq8 c1drgsit co8ar9d c1d5e9u5 c1h1nl5c c13gmqhk c140aa3g c1u5brzr cef8lky c1j915ev chewl0k cks4e9z cwqrhhf c1q5912w c1szy17v ci6o494 c17d547z c1dme089 ce6mn25"
-        href="#"
         ><b class="w-bold-text">WIFI Scanner</b></a
       ><a
+        href="/esp32/ir-alarm"
         class="w-link c3j6eu6 cw8wk4g c1n8335o cnrqlv9 c1aj0wmm c5lna9m c19bzeoe c6gts8m c1fwk2hh cgpqfz5 c16mm8xg c8gwi5u c17dfjxw c1opx329 c1upkxol c1dukfjv c920vq8 c1drgsit co8ar9d c1d5e9u5 c1h1nl5c c13gmqhk c140aa3g c1u5brzr cef8lky c1j915ev chewl0k cks4e9z cwqrhhf c1q5912w c1szy17v ci6o494 c17d547z c1dme089 ce6mn25"
-        href="#"
         ><b class="w-bold-text">IR Alarm</b></a
       >
     </div>
@@ -143,18 +143,18 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.DidfsT6n.js"
+      src="/assets/entries/entry-server-routing.Cps506C4.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_index.DT7a71qX.js"
+      href="/assets/entries/pages_index.BitO92f0.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-CYl7P4of.js"
+      href="/assets/chunks/chunk-fMywX80e.js"
       as="script"
       type="text/javascript"
     />
