--- a/esp32/ab/cd/ef/gh/ij/kl/mn/op/qr/secret/index.html
+++ b/esp32/ab/cd/ef/gh/ij/kl/mn/op/qr/secret/index.html
@@ -8,12 +8,15 @@
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta property="og:url" content="https://url/" />
+    <meta
+      property="og:url"
+      content="https://url/esp32/ab/cd/ef/gh/ij/kl/mn/op/qr/secret"
+    />
     <title>Home</title>
     <meta property="og:title" content="Home" />
     <meta property="og:type" content="website" />
   </head>
-  <body class="w-body cef8lky c3i1u3x">
+  <body class="w-body cef8lky c3i1u3x chk6qok">
     <div class="w-box cxit5en cogsgih ctdzyps ce19egy">
       <a href="/" class="w-link"
         ><img
@@ -68,51 +71,34 @@
       </button>
     </div>
     <div class="w-box">
-      <div
-        class="w-text c5lna9m c193t7zm cbrxtkg chewl0k cmsikwg c2cd00y c1vuvr3w"
-      >
-        ESP32 - TUTORIALS
-      </div>
+      <p class="w-paragraph ck3rk9r cz5s00m cgzpa1h chewl0k c1g05gyx">
+        Hello, you found my secret page
+      </p>
       <img
         alt=""
-        width="522"
-        height="273"
-        src="/assets/esp32_81JclRfZDmtSi5i8RMPxQ.png"
-        class="w-image c3j6eu6 cw8wk4g c1n8335o c1y06m74 cq9ad4j c1h1nl5c c13gmqhk cysxdkh c1cqavt"
+        width="599"
+        height="597"
+        src="/assets/logothomasedison__8RxHCUpZJpoySyG34bKy.png"
+        class="w-image cw8wk4g c1n8335o czlur6q c1h1nl5c c13gmqhk cp845gz"
         sizes="100vw"
         srcset="
-          /assets/esp32_81JclRfZDmtSi5i8RMPxQ.png   16w,
-          /assets/esp32_81JclRfZDmtSi5i8RMPxQ.png   32w,
-          /assets/esp32_81JclRfZDmtSi5i8RMPxQ.png   48w,
-          /assets/esp32_81JclRfZDmtSi5i8RMPxQ.png   64w,
-          /assets/esp32_81JclRfZDmtSi5i8RMPxQ.png   96w,
-          /assets/esp32_81JclRfZDmtSi5i8RMPxQ.png  128w,
-          /assets/esp32_81JclRfZDmtSi5i8RMPxQ.png  256w,
-          /assets/esp32_81JclRfZDmtSi5i8RMPxQ.png  384w,
-          /assets/esp32_81JclRfZDmtSi5i8RMPxQ.png  640w,
-          /assets/esp32_81JclRfZDmtSi5i8RMPxQ.png  750w,
-          /assets/esp32_81JclRfZDmtSi5i8RMPxQ.png  828w,
-          /assets/esp32_81JclRfZDmtSi5i8RMPxQ.png 1080w
+          /assets/logothomasedison__8RxHCUpZJpoySyG34bKy.png   16w,
+          /assets/logothomasedison__8RxHCUpZJpoySyG34bKy.png   32w,
+          /assets/logothomasedison__8RxHCUpZJpoySyG34bKy.png   48w,
+          /assets/logothomasedison__8RxHCUpZJpoySyG34bKy.png   64w,
+          /assets/logothomasedison__8RxHCUpZJpoySyG34bKy.png   96w,
+          /assets/logothomasedison__8RxHCUpZJpoySyG34bKy.png  128w,
+          /assets/logothomasedison__8RxHCUpZJpoySyG34bKy.png  256w,
+          /assets/logothomasedison__8RxHCUpZJpoySyG34bKy.png  384w,
+          /assets/logothomasedison__8RxHCUpZJpoySyG34bKy.png  640w,
+          /assets/logothomasedison__8RxHCUpZJpoySyG34bKy.png  750w,
+          /assets/logothomasedison__8RxHCUpZJpoySyG34bKy.png  828w,
+          /assets/logothomasedison__8RxHCUpZJpoySyG34bKy.png 1080w,
+          /assets/logothomasedison__8RxHCUpZJpoySyG34bKy.png 1200w
         "
         decoding="async"
         loading="lazy"
-      /><a
-        href="/esp32/getting-started"
-        class="w-link c3j6eu6 cw8wk4g c1n8335o cnrqlv9 c1aj0wmm c5lna9m c19bzeoe c6gts8m cywnn7c cgpqfz5 c16mm8xg c8gwi5u c17dfjxw c1opx329 c1upkxol c1dukfjv c920vq8 c1drgsit co8ar9d c1d5e9u5 c1h1nl5c c13gmqhk c14ghf94 c1u5brzr cef8lky c1j915ev chewl0k cks4e9z cwqrhhf c1q5912w c1szy17v ci6o494 c17d547z c1dme089 ce6mn25"
-        ><b class="w-bold-text">Getting Started</b></a
-      ><a
-        href="/esp32/rgb-server"
-        class="w-link c3j6eu6 cw8wk4g c1n8335o cnrqlv9 c1aj0wmm c5lna9m c19bzeoe c6gts8m c1fwk2hh cgpqfz5 c16mm8xg c8gwi5u c17dfjxw c1opx329 c1upkxol c1dukfjv c920vq8 c1drgsit co8ar9d c1d5e9u5 c1h1nl5c c13gmqhk c140aa3g c1u5brzr cef8lky c1j915ev chewl0k cks4e9z cwqrhhf c1q5912w c1szy17v ci6o494 c17d547z c1dme089 ce6mn25"
-        ><b class="w-bold-text">RGB Server</b></a
-      ><a
-        href="/esp32/wifi-scanner"
-        class="w-link c3j6eu6 cw8wk4g c1n8335o cnrqlv9 c1aj0wmm c5lna9m c19bzeoe c6gts8m c1fwk2hh cgpqfz5 c16mm8xg c8gwi5u c17dfjxw c1opx329 c1upkxol c1dukfjv c920vq8 c1drgsit co8ar9d c1d5e9u5 c1h1nl5c c13gmqhk c140aa3g c1u5brzr cef8lky c1j915ev chewl0k cks4e9z cwqrhhf c1q5912w c1szy17v ci6o494 c17d547z c1dme089 ce6mn25"
-        ><b class="w-bold-text">WIFI Scanner</b></a
-      ><a
-        href="/esp32/ir-alarm"
-        class="w-link c3j6eu6 cw8wk4g c1n8335o cnrqlv9 c1aj0wmm c5lna9m c19bzeoe c6gts8m c1fwk2hh cgpqfz5 c16mm8xg c8gwi5u c17dfjxw c1opx329 c1upkxol c1dukfjv c920vq8 c1drgsit co8ar9d c1d5e9u5 c1h1nl5c c13gmqhk c140aa3g c1u5brzr cef8lky c1j915ev chewl0k cks4e9z cwqrhhf c1q5912w c1szy17v ci6o494 c17d547z c1dme089 ce6mn25"
-        ><b class="w-bold-text">IR Alarm</b></a
-      >
+      />
     </div>
     <script id="vike_pageContext" type="application/json">
       {
@@ -122,10 +108,10 @@
         "abortStatusCode": "!undefined",
         "_abortCall": "!undefined",
         "_pageContextInitIsPassedToClient": "!undefined",
-        "pageId": "/pages/index",
+        "pageId": "/pages/esp32/ab/cd/ef/gh/ij/kl/mn/op/qr/secret",
         "routeParams": {},
         "data": {
-          "url": "https://url/",
+          "url": "https://url/esp32/ab/cd/ef/gh/ij/kl/mn/op/qr/secret",
           "system": { "params": {}, "search": {}, "origin": "https://url" },
           "resources": {},
           "pageMeta": {
@@ -149,12 +135,17 @@
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_index.DLEHiw8Y.js"
+      href="/assets/entries/pages_esp32_ab_cd_ef_gh_ij_kl_mn_op_qr_secret.RLVUvFp1.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
       href="/assets/chunks/chunk-D-jzwPvi.js"
+      as="script"
+      type="text/javascript"
+    /><link
+      rel="modulepreload"
+      href="/assets/chunks/chunk-CqHlRVf1.js"
       as="script"
       type="text/javascript"
     />
