--- a/esp32/ir-alarm/index.html
+++ b/esp32/ir-alarm/index.html
@@ -4,7 +4,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/assets/static/app_generated_index-6937cd5a.BStTqCqC.css"
+      href="/assets/static/app_generated_index-6937cd5a.DKT3nhLz.css"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -71,7 +71,11 @@
       class="w-box ce19egy c1h1nl5c c13gmqhk cogsgih c16bzkdh c13ckunz cn13o9d c1tszs9s c1mmoi84 cw4dc5j c1933afg c1cl6xrl cex20e6"
     >
       <div class="w-text chewl0k cs8jnol c1bb95j4 c192du2r c136d2hq">
-        Keep in mind these resistor colors!
+        Keep in mind these resistor colors<a
+          href="/esp32/ab/cd/ef/gh/ij/kl/mn/op/qr/secret"
+          class="w-rich-text-link cef8lky c1u5brzr c1pr4ejo"
+          >!</a
+        >
       </div>
       <div
         class="w-box c1h1nl5c c13gmqhk ckfm5zf c1f1okbg ch1fyv9 cwo00xu cotpzvh ccwx88h c11693zx co8eotk"
@@ -390,23 +394,33 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.Cps506C4.js"
+      src="/assets/entries/entry-server-routing.CffCSmG-.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_esp32_ir-alarm.XygzzpQV.js"
+      href="/assets/entries/pages_esp32_ir-alarm.CzTnp_BF.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-fMywX80e.js"
+      href="/assets/chunks/chunk-D-jzwPvi.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-jXEKo5QQ.js"
+      href="/assets/chunks/chunk-CqHlRVf1.js"
+      as="script"
+      type="text/javascript"
+    /><link
+      rel="modulepreload"
+      href="/assets/chunks/chunk-CTFwEhyJ.js"
+      as="script"
+      type="text/javascript"
+    /><link
+      rel="modulepreload"
+      href="/assets/chunks/chunk-CWAJqpQR.js"
       as="script"
       type="text/javascript"
     />
