--- a/esp32/wifi-scanner/index.html
+++ b/esp32/wifi-scanner/index.html
@@ -4,7 +4,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/assets/static/app_generated_index-6937cd5a.BStTqCqC.css"
+      href="/assets/static/app_generated_index-6937cd5a.DKT3nhLz.css"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -450,23 +450,33 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.Cps506C4.js"
+      src="/assets/entries/entry-server-routing.CffCSmG-.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_esp32_wifi-scanner.BmgMNa1-.js"
+      href="/assets/entries/pages_esp32_wifi-scanner.0Kkb_v0_.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-fMywX80e.js"
+      href="/assets/chunks/chunk-D-jzwPvi.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-jXEKo5QQ.js"
+      href="/assets/chunks/chunk-CqHlRVf1.js"
+      as="script"
+      type="text/javascript"
+    /><link
+      rel="modulepreload"
+      href="/assets/chunks/chunk-CTFwEhyJ.js"
+      as="script"
+      type="text/javascript"
+    /><link
+      rel="modulepreload"
+      href="/assets/chunks/chunk-CWAJqpQR.js"
       as="script"
       type="text/javascript"
     />
