--- a/esp32/abc/secret/index.html
+++ b/esp32/abc/secret/index.html
@@ -4,14 +4,11 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/assets/static/app_generated_index-6937cd5a.DKT3nhLz.css"
+      href="/assets/static/app_generated_index-6937cd5a.CEBFEEgz.css"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta
-      property="og:url"
-      content="https://url/esp32/ab/cd/ef/gh/ij/kl/mn/op/qr/secret"
-    />
+    <meta property="og:url" content="https://url/esp32/abc/secret" />
     <title>Home</title>
     <meta property="og:title" content="Home" />
     <meta property="og:type" content="website" />
@@ -108,10 +105,10 @@
         "abortStatusCode": "!undefined",
         "_abortCall": "!undefined",
         "_pageContextInitIsPassedToClient": "!undefined",
-        "pageId": "/pages/esp32/ab/cd/ef/gh/ij/kl/mn/op/qr/secret",
+        "pageId": "/pages/esp32/abc/secret",
         "routeParams": {},
         "data": {
-          "url": "https://url/esp32/ab/cd/ef/gh/ij/kl/mn/op/qr/secret",
+          "url": "https://url/esp32/abc/secret",
           "system": { "params": {}, "search": {}, "origin": "https://url" },
           "resources": {},
           "pageMeta": {
@@ -129,13 +126,13 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.CffCSmG-.js"
+      src="/assets/entries/entry-server-routing.D0HjngmO.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_esp32_ab_cd_ef_gh_ij_kl_mn_op_qr_secret.RLVUvFp1.js"
+      href="/assets/entries/pages_esp32_abc_secret.DhElDh1h.js"
       as="script"
       type="text/javascript"
     /><link
