--- a/esp32/ir-alarm/index.html
+++ b/esp32/ir-alarm/index.html
@@ -4,7 +4,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/assets/static/app_generated_index-6937cd5a.DKT3nhLz.css"
+      href="/assets/static/app_generated_index-6937cd5a.CEBFEEgz.css"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -70,9 +70,9 @@
     <div
       class="w-box ce19egy c1h1nl5c c13gmqhk cogsgih c16bzkdh c13ckunz cn13o9d c1tszs9s c1mmoi84 cw4dc5j c1933afg c1cl6xrl cex20e6"
     >
-      <div class="w-text chewl0k cs8jnol c1bb95j4 c192du2r c136d2hq">
+      <div class="w-text chewl0k cs8jnol c1d73b5o c192du2r c136d2hq cnykfat">
         Keep in mind these resistor colors<a
-          href="/esp32/ab/cd/ef/gh/ij/kl/mn/op/qr/secret"
+          href="/esp32/abc/secret"
           class="w-rich-text-link cef8lky c1u5brzr c1pr4ejo"
           >!</a
         >
@@ -394,13 +394,13 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.CffCSmG-.js"
+      src="/assets/entries/entry-server-routing.D0HjngmO.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_esp32_ir-alarm.CzTnp_BF.js"
+      href="/assets/entries/pages_esp32_ir-alarm.BJpEn1N4.js"
       as="script"
       type="text/javascript"
     /><link
