--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/assets/static/app_generated_index-6937cd5a.DKT3nhLz.css"
+      href="/assets/static/app_generated_index-6937cd5a.CEBFEEgz.css"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -143,13 +143,13 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.CffCSmG-.js"
+      src="/assets/entries/entry-server-routing.D0HjngmO.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_index.DLEHiw8Y.js"
+      href="/assets/entries/pages_index.jJ9IqkBa.js"
       as="script"
       type="text/javascript"
     /><link
