--- a/esp32/abc/secret/index.html
+++ b/esp32/abc/secret/index.html
@@ -4,7 +4,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/assets/static/app_generated_index-6937cd5a.CEBFEEgz.css"
+      href="/assets/static/app_generated_index-6937cd5a.CEiMfHft.css"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -126,23 +126,23 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.D0HjngmO.js"
+      src="/assets/entries/entry-server-routing.DwOJXs05.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_esp32_abc_secret.DhElDh1h.js"
+      href="/assets/entries/pages_esp32_abc_secret.XsDlEMyU.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-D-jzwPvi.js"
+      href="/assets/chunks/chunk-BhELJTGN.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-CqHlRVf1.js"
+      href="/assets/chunks/chunk-BiimETKd.js"
       as="script"
       type="text/javascript"
     />
