--- a/esp32/getting-started/index.html
+++ b/esp32/getting-started/index.html
@@ -4,7 +4,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/assets/static/app_generated_index-6937cd5a.CEBFEEgz.css"
+      href="/assets/static/app_generated_index-6937cd5a.CEiMfHft.css"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Home" />
     <meta property="og:type" content="website" />
   </head>
-  <body class="w-body cef8lky c3i1u3x chk6qok">
+  <body class="w-body cef8lky c3i1u3x chk6qok c1g05gyx">
     <div class="w-box cxit5en cogsgih ctdzyps ce19egy">
       <a href="/" class="w-link"
         ><img
@@ -411,28 +411,28 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.D0HjngmO.js"
+      src="/assets/entries/entry-server-routing.DwOJXs05.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_esp32_getting-started.C_XjVhFu.js"
+      href="/assets/entries/pages_esp32_getting-started.BDhEIHDq.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-D-jzwPvi.js"
+      href="/assets/chunks/chunk-BhELJTGN.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-CqHlRVf1.js"
+      href="/assets/chunks/chunk-BiimETKd.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-CWAJqpQR.js"
+      href="/assets/chunks/chunk-xonkdfrU.js"
       as="script"
       type="text/javascript"
     />
