--- a/esp32/ir-alarm/index.html
+++ b/esp32/ir-alarm/index.html
@@ -4,7 +4,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/assets/static/app_generated_index-6937cd5a.CEBFEEgz.css"
+      href="/assets/static/app_generated_index-6937cd5a.CEiMfHft.css"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Home" />
     <meta property="og:type" content="website" />
   </head>
-  <body class="w-body cef8lky c3i1u3x chk6qok">
+  <body class="w-body cef8lky c3i1u3x cgzpa1h">
     <div class="w-box cxit5en cogsgih ctdzyps ce19egy">
       <a href="/" class="w-link"
         ><img
@@ -356,7 +356,7 @@
     </div>
     <div class="w-box">
       <a
-        href="/"
+        href="/esp32/potentiometer"
         class="w-link c3j6eu6 cw8wk4g c1n8335o cnrqlv9 c1aj0wmm c5lna9m c19bzeoe c6gts8m cywnn7c cgpqfz5 c16mm8xg c8gwi5u c17dfjxw c1opx329 c1upkxol c1dukfjv c920vq8 c1drgsit co8ar9d c1d5e9u5 c1h1nl5c c13gmqhk c1hqpamb c1u5brzr cef8lky c1rvw9cl chewl0k cks4e9z cwqrhhf c1q5912w c1szy17v ci6o494 c17d547z c1dme089 ce6mn25"
         ><span class="w-text"><b class="w-bold-text">NEXT</b></span></a
       ><a
@@ -394,33 +394,33 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.D0HjngmO.js"
+      src="/assets/entries/entry-server-routing.DwOJXs05.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_esp32_ir-alarm.BJpEn1N4.js"
+      href="/assets/entries/pages_esp32_ir-alarm.DVo_npRo.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-D-jzwPvi.js"
+      href="/assets/chunks/chunk-BhELJTGN.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-CqHlRVf1.js"
+      href="/assets/chunks/chunk-BiimETKd.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-CTFwEhyJ.js"
+      href="/assets/chunks/chunk-CevxxO66.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-CWAJqpQR.js"
+      href="/assets/chunks/chunk-xonkdfrU.js"
       as="script"
       type="text/javascript"
     />
