--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/assets/static/app_generated_index-6937cd5a.C4En5Qoe.css"
+      href="/assets/static/app_generated_index-6937cd5a.CjoJYaS-.css"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -147,18 +147,18 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.B7Czbz5f.js"
+      src="/assets/entries/entry-server-routing.BPIIxPAD.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_index.EKthCh06.js"
+      href="/assets/entries/pages_index.oEjefc2O.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-BhELJTGN.js"
+      href="/assets/chunks/chunk-PrT5ExKt.js"
       as="script"
       type="text/javascript"
     />
