--- a/esp32/wifi-scanner/index.html
+++ b/esp32/wifi-scanner/index.html
@@ -4,7 +4,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/assets/static/app_generated_index-6937cd5a.CjoJYaS-.css"
+      href="/assets/static/app_generated_index-6937cd5a.BPtP4E8y.css"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -450,33 +450,28 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.BPIIxPAD.js"
+      src="/assets/entries/entry-server-routing.4LQbqxJH.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_esp32_wifi-scanner.bKFZrK-c.js"
+      href="/assets/entries/pages_esp32_wifi-scanner.DtPKxoGX.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-PrT5ExKt.js"
+      href="/assets/chunks/chunk-DJl-fdYE.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-fSluUq99.js"
+      href="/assets/chunks/chunk-5LPJm-p8.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-B6KXqO2w.js"
-      as="script"
-      type="text/javascript"
-    /><link
-      rel="modulepreload"
-      href="/assets/chunks/chunk-CXFlbE6I.js"
+      href="/assets/chunks/chunk-BJ1zdyVq.js"
       as="script"
       type="text/javascript"
     />
