--- a/esp32/abc/secret/index.html
+++ b/esp32/abc/secret/index.html
@@ -4,7 +4,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/assets/static/app_generated_index-6937cd5a.CjoJYaS-.css"
+      href="/assets/static/app_generated_index-6937cd5a.BPtP4E8y.css"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -68,15 +68,166 @@
       </button>
     </div>
     <div class="w-box">
-      <p class="w-paragraph ck3rk9r cz5s00m cgzpa1h chewl0k c1g05gyx">
-        Hello, you found my secret page
-      </p>
+      <div class="w-html-embed cvqnsyi">
+        <canvas id="pong"></canvas>
+        <div id="game-over">Game Over! Press F5 to Restart</div>
+
+        <script>
+          // Set up the canvas
+          const canvas = document.getElementById("pong");
+          const ctx = canvas.getContext("2d");
+
+          // Define game variables
+          const paddleWidth = 10,
+            paddleHeight = 100;
+          let ballRadius = 8;
+          let leftPaddleY = (canvas.height - paddleHeight) / 2;
+          let rightPaddleY = (canvas.height - paddleHeight) / 2;
+          let ballX = canvas.width / 2;
+          let ballY = canvas.height / 2;
+          let ballSpeedX = 4,
+            ballSpeedY = 4;
+          let leftPaddleSpeed = 0,
+            rightPaddleSpeed = 0;
+          let leftScore = 0,
+            rightScore = 0;
+          const paddleSpeed = 6;
+
+          // Set up the canvas size
+          canvas.width = 800;
+          canvas.height = 400;
+
+          // Event listeners for paddle movement
+          document.addEventListener("keydown", (e) => {
+            if (e.key === "ArrowUp") rightPaddleSpeed = -paddleSpeed;
+            if (e.key === "ArrowDown") rightPaddleSpeed = paddleSpeed;
+            if (e.key === "w") leftPaddleSpeed = -paddleSpeed;
+            if (e.key === "s") leftPaddleSpeed = paddleSpeed;
+          });
+
+          document.addEventListener("keyup", (e) => {
+            if (e.key === "ArrowUp" || e.key === "ArrowDown")
+              rightPaddleSpeed = 0;
+            if (e.key === "w" || e.key === "s") leftPaddleSpeed = 0;
+          });
+
+          // Draw the paddles, ball, and score
+          function draw() {
+            // Clear the canvas
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+            // Draw left paddle
+            ctx.fillStyle = "#FFFFFF";
+            ctx.fillRect(0, leftPaddleY, paddleWidth, paddleHeight);
+
+            // Draw right paddle
+            ctx.fillStyle = "#FFFFFF";
+            ctx.fillRect(
+              canvas.width - paddleWidth,
+              rightPaddleY,
+              paddleWidth,
+              paddleHeight,
+            );
+
+            // Draw the ball
+            ctx.beginPath();
+            ctx.arc(ballX, ballY, ballRadius, 0, Math.PI * 2, false);
+            ctx.fillStyle = "#FFFFFF";
+            ctx.fill();
+            ctx.closePath();
+
+            // Draw the score
+            ctx.font = "32px Arial";
+            ctx.fillText(leftScore, canvas.width / 4, 50);
+            ctx.fillText(rightScore, (canvas.width * 3) / 4, 50);
+          }
+
+          // Update the ball position
+          function updateBall() {
+            ballX += ballSpeedX;
+            ballY += ballSpeedY;
+
+            // Collision with top and bottom walls
+            if (ballY + ballRadius > canvas.height || ballY - ballRadius < 0) {
+              ballSpeedY = -ballSpeedY;
+            }
+
+            // Ball collision with paddles
+            if (
+              ballX - ballRadius < paddleWidth &&
+              ballY > leftPaddleY &&
+              ballY < leftPaddleY + paddleHeight
+            ) {
+              ballSpeedX = -ballSpeedX;
+            }
+
+            if (
+              ballX + ballRadius > canvas.width - paddleWidth &&
+              ballY > rightPaddleY &&
+              ballY < rightPaddleY + paddleHeight
+            ) {
+              ballSpeedX = -ballSpeedX;
+            }
+
+            // Ball out of bounds (left or right)
+            if (ballX - ballRadius < 0) {
+              rightScore++;
+              resetBall();
+            }
+
+            if (ballX + ballRadius > canvas.width) {
+              leftScore++;
+              resetBall();
+            }
+          }
+
+          // Reset ball to the center after scoring
+          function resetBall() {
+            ballX = canvas.width / 2;
+            ballY = canvas.height / 2;
+            ballSpeedX = -ballSpeedX;
+            ballSpeedY = 4;
+          }
+
+          // Move the paddles
+          function movePaddles() {
+            leftPaddleY += leftPaddleSpeed;
+            rightPaddleY += rightPaddleSpeed;
+
+            // Prevent paddles from going out of bounds
+            if (leftPaddleY < 0) leftPaddleY = 0;
+            if (leftPaddleY + paddleHeight > canvas.height)
+              leftPaddleY = canvas.height - paddleHeight;
+            if (rightPaddleY < 0) rightPaddleY = 0;
+            if (rightPaddleY + paddleHeight > canvas.height)
+              rightPaddleY = canvas.height - paddleHeight;
+          }
+
+          // Game loop
+          function gameLoop() {
+            draw();
+            updateBall();
+            movePaddles();
+
+            // Check for game over
+            if (leftScore >= 10 || rightScore >= 10) {
+              document.getElementById("game-over").style.display = "block";
+              return;
+            }
+
+            requestAnimationFrame(gameLoop);
+          }
+
+          // Start the game
+          gameLoop();
+        </script>
+      </div>
       <img
         alt=""
         width="599"
         height="597"
         src="/assets/logothomasedison__8RxHCUpZJpoySyG34bKy.png"
-        class="w-image cw8wk4g c1n8335o czlur6q c1h1nl5c c13gmqhk cp845gz"
+        class="w-image cw8wk4g c1n8335o c1byfc7y c1h1nl5c c13gmqhk cp845gz c1d5e9u5"
         sizes="100vw"
         srcset="
           /assets/logothomasedison__8RxHCUpZJpoySyG34bKy.png   16w,
@@ -96,6 +247,9 @@
         decoding="async"
         loading="lazy"
       />
+      <p class="w-paragraph ck3rk9r cz5s00m cgzpa1h chewl0k c1d5e9u5 c1g05gyx">
+        Hello, you found my secret page
+      </p>
     </div>
     <script id="vike_pageContext" type="application/json">
       {
@@ -126,23 +280,23 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.BPIIxPAD.js"
+      src="/assets/entries/entry-server-routing.4LQbqxJH.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_esp32_abc_secret.DjqUl9RV.js"
+      href="/assets/entries/pages_esp32_abc_secret.BjwfKDRo.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-PrT5ExKt.js"
+      href="/assets/chunks/chunk-DJl-fdYE.js"
       as="script"
       type="text/javascript"
     /><link
       rel="modulepreload"
-      href="/assets/chunks/chunk-fSluUq99.js"
+      href="/assets/chunks/chunk-5LPJm-p8.js"
       as="script"
       type="text/javascript"
     />
